third_party/move/move-compiler-v2/tests/checking/positional_fields/variant_abiliy_decl_invalid.move
module 0x42::test {
	enum Foo<T> has drop {
		A(T),
		B(u8, bool),
	} has drop, copy;
}
